--- a/Dockerfiles/nginx/Dockerfile
+++ b/Dockerfiles/nginx/Dockerfile
@@ -1,26 +1,15 @@
 FROM public.ecr.aws/amazonlinux/amazonlinux:2.0.20230404.0-arm64v8
-
-# Install NGINX and required tools in a single layer to reduce image size
-RUN yum update -y && \
-    amazon-linux-extras install nginx1 -y && \
-    yum install nginx-mod-stream net-tools iputils procps htop -y && \
-    yum clean all && \
-    mv /etc/nginx/nginx.conf /etc/nginx/nginx.conf.orig
-
-# Copy configuration file
+RUN yum update -y \
+    && amazon-linux-extras install nginx1 -y \
+    && yum install install nginx-mod-stream -y \
+    && yum install net-tools -y \
+    && yum install iputils -y \
+    && yum install procps -y \
+    && yum install htop -y \
+    && mv /etc/nginx/nginx.conf /etc/nginx/nginx.conf.orig
 COPY nginx.conf /etc/nginx/
-
-# Configure logging to stdout/stderr for container environments
-RUN ln -sf /dev/stdout /var/log/nginx/http_access.log && \
-    ln -sf /dev/stderr /var/log/nginx/http_error.log && \
-    ln -sf /dev/stdout /var/log/nginx/stream_access.log && \
-    ln -sf /dev/stderr /var/log/nginx/stream_error.log
-
-# Expose ports
-EXPOSE 80 443
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s CMD curl -f http://localhost/ || exit 1
-
-# Start NGINX
+RUN ln -sf /dev/stdout /var/log/nginx/http_access.log \
+    && ln -sf /dev/stderr /var/log/nginx/http_error.log \
+	&& ln -sf /dev/stdout /var/log/nginx/stream_access.log \
+    && ln -sf /dev/stderr /var/log/nginx/stream_error.log
 CMD ["nginx", "-g", "daemon off;"]
