--- a/vpc-lattice_example/vpc-lattice_service_endpoint.yml
+++ b/vpc-lattice_example/vpc-lattice_service_endpoint.yml
@@ -218,3 +218,11 @@ Resources:
                     "statusDescription": "500 Internal Server Error",
                     "body": "Server error - check lambda logs\n"
                   }
+
+Outputs:
+  EndpointId:
+    Description: VPC Endpoint ID
+    Value: !GetAtt VPCLatticeServiceNetworkEndpoint.Id
+  VPCLatticeServiceArn:
+    Description: VPC Lattice Service ARN
+    Value: !GetAtt VPCLatticeService.Arn
