--- a/guidance-stack.yml
+++ b/guidance-stack.yml
@@ -3,17 +3,22 @@ Description: (SO9403) Guidance - External Connectivity to Amazon VPC Lattice
 Transform: 'AWS::LanguageExtensions'
 
 Parameters:
-  AllowedBlock:
-    #AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
-    Description: CIDR block for the allowed IP address range on the NLB
+  AllowedIPv4Block:
+    Description: IPv4 CIDR block for the allowed IP address range on the NLB
     Type: String
-    #ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/y
+  AllowedIPv6Block:
+    Description: IPv6 CIDR block for the allowed IP address range on the NLB
+    Type: String
+    Default: EMPTY
   VpcCidr:
     AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
     Default: 192.168.1.0/16
-    Description: CIDR block for the VPC
+    Description: IPv4 CIDR block for the VPC
     Type: String
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/y
+
+Conditions:
+  Ipv6Provided: !Not [!Equals [!Ref AllowedIPv6Block, EMPTY]]
 
 Mappings:
   SubnetCIDR:
@@ -187,15 +192,15 @@ Resources:
               - !Ref AWS::StackName
 
   # For::Each iteration: per port (HTTP, HTTPS)
-  # Egress rules (NLB)
+  # IPv4 Ingress rules (NLB) & Egress ruless
   'Fn::ForEach::NginxNLBSecurityGroup':
     - Port
     - [HTTP, HTTPS]
-    - 'NginxNLBSGIngress${Port}':
+    - 'NginxNLBSGIPv4Ingress${Port}':
         Type: AWS::EC2::SecurityGroupIngress
         Properties:
           GroupId: !Ref NginxNLBSG
-          CidrIp: !Ref AllowedBlock
+          CidrIp: !Ref AllowedIPv4Block
           IpProtocol: 'tcp'
           FromPort: !FindInMap [Protocol, Port, 'Fn::Sub': '${Port}']
           ToPort: !FindInMap [Protocol, Port, 'Fn::Sub': '${Port}']
@@ -207,7 +212,21 @@ Resources:
           IpProtocol: 'tcp'
           FromPort: !FindInMap [Protocol, Port, 'Fn::Sub': '${Port}']
           ToPort: !FindInMap [Protocol, Port, 'Fn::Sub': '${Port}']
-      
+  
+  # IPv6 Ingress rules (NLB) - if provided
+  'Fn::ForEach::IPv6NginxNLBSecurityGroup':
+    - Port
+    - [HTTP, HTTPS]
+    - 'NginxNLBSGIPv6Ingress${Port}':
+        Type: AWS::EC2::SecurityGroupIngress
+        Condition: Ipv6Provided
+        Properties:
+          GroupId: !Ref NginxNLBSG
+          CidrIpv6: !Ref AllowedIPv6Block
+          IpProtocol: 'tcp'
+          FromPort: !FindInMap [Protocol, Port, 'Fn::Sub': '${Port}']
+          ToPort: !FindInMap [Protocol, Port, 'Fn::Sub': '${Port}']
+
   # ECS Cluster
   NginxECSSG:
     Type: 'AWS::EC2::SecurityGroup'
@@ -711,3 +730,14 @@ Resources:
       ServiceToken: !GetAtt DockerBuilderLambda.Arn
       ProjectName: !Ref DockerBuildProject
       Version: '1.0.0' # Version/timestamp to force updates
+
+Outputs:
+  VpcId:
+    Description: Ingress VPC ID
+    Value: !Ref VPC
+  NLBDomainName:
+    Description: NLB Domain Name
+    Value: !GetAtt NginxNLB.DNSName
+  NLBHostedZoneId:
+    Description: NLB Hosted Zone ID
+    Value: !GetAtt NginxNLB.CanonicalHostedZoneID
