--- a/guidance-stack.yml
+++ b/guidance-stack.yml
@@ -11,11 +11,11 @@ Parameters:
     Type: String
     Default: EMPTY
   VpcCidr:
-    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
+    Type: String
     Default: 192.168.1.0/16
     Description: IPv4 CIDR block for the VPC
-    Type: String
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/y
+    AllowedPattern: "^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(?:\\/(?:[0-9]|[1-2][0-9]|3[0-2]))$"
+    ConstraintDescription: Must be a valid IPv4 CIDR block (e.g., 192.168.1.0/16)
 
 Conditions:
   Ipv6Provided: !Not [!Equals [!Ref AllowedIPv6Block, EMPTY]]
@@ -236,8 +236,6 @@ Resources:
       SecurityGroupEgress:
         - CidrIp: 0.0.0.0/0
           IpProtocol: '-1'
-          FromPort: -1
-          ToPort: -1
       Tags:
         - Key: Name
           Value: !Join
@@ -274,8 +272,6 @@ Resources:
       SecurityGroupEgress:
         - CidrIp: 0.0.0.0/0
           IpProtocol: '-1'
-          FromPort: -1
-          ToPort: -1
       Tags:
         - Key: Name
           Value: !Join
@@ -357,6 +353,7 @@ Resources:
   LatticeExternalConnectivityECRRepo:
     Type: AWS::ECR::Repository
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
 
   # ---------- ECS CLUSTER ----------
   NginxCluster:
